# chi-blazar-tempest-plugin

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
src/blazar_tempest_plugin/: __init__.py  config.py  plugin.py
src/blazar_tempest_plugin/auth/: oidc_provider.py
src/blazar_tempest_plugin/common/: exceptions.py  utils.py  waiters.py
src/blazar_tempest_plugin/services/: reservation.py
src/blazar_tempest_plugin/services/reservation/: __init__.py  base.py  devices_client.py  floatingip_client.py  hosts_client.py  leases_client.py  networks_client.py  reservation.py
src/blazar_tempest_plugin/tests/: base.py
src/blazar_tempest_plugin/tests/api/: base.py  test_app_credential_implicit_roles.py  test_authorized_projects.py  test_chi_protected_images.py  test_device_container_exec.py  test_device_container_failures.py  test_device_containers.py  test_floatingips.py  test_hosts.py  test_leases.py  test_networks.py
src/blazar_tempest_plugin/tests/api/admin/: test_networks.py
src/blazar_tempest_plugin/tests/api/leases/: test_lease_devices.py  test_lease_enforcement.py  test_lease_permissions.py  test_leases.py
src/blazar_tempest_plugin/tests/scenario/: base.py  test_device_basic_ops.py  test_floatingip_issues.py  test_images.py  test_oshost_basic_ops.py  test_reservable_vlans.py  test_shared_filesystem.py
tests/unit/: test_blazar_plugin.py
