[project]
name = "blazar-tempest-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tempest"
]

[project.entry-points."tempest.test_plugins"]
blazar_tempest_plugin = "blazar_tempest_plugin.plugin:BlazarTempestPlugin"


[project.optional-dependencies]
dev = [
    "tox",
    "oslotest"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "D",        # pydocstyle
    "E",        # pycodestyle (error)
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "LOG",      # flake8-logging
]
