[project]
name = "blazar-tempest-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tempest",
    "zun-tempest-plugin"
]

[project.entry-points."tempest.test_plugins"]
blazar_tempest_plugin = "blazar_tempest_plugin.plugin:BlazarTempestPlugin"


[project.optional-dependencies]
dev = [
    "tox",
    "oslotest"
]
